<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="app.greentech.RecycleActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What type of item was recycled?"
        android:textSize="@dimen/heading_size"/>

    <RadioGroup
        android:id="@+id/type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <RadioButton
            android:id="@+id/radio_paper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/recycle_paper"/>

        <RadioButton
            android:id="@+id/radio_plastic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycle_plastic" />

        <RadioButton
            android:id="@+id/radio_alumin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycle_alumin"/>

        <RadioButton
            android:id="@+id/radio_glass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycle_glass"/>


    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorAccent"
        android:onClick="addButtonClick"/>

</LinearLayout>
